2003-04-45  Reed Loden  <reed@reedloden.com>

	* INSTALL: Updated the "howto" for CVS.

	* INSTALL_FR: Updated the "howto" for CVS. (NOTE: Somebody needs
	to correct the part about the password as there isn't a password
	right now... I don't know French so I couldn't correct that.)

	* doc/Authors: Corrected my e-mail address and added several
	others. :)

	* doc/readme.cvs: Updated the "howto" for CVS.

	* tools/README: Updated location of file and partly rewrote to
	fit u2.10.11's Features.



2003-05-01  Reed Loden  <reed@reedloden.com>
	* ircd/s_err.c: Added network to text and edited 001 a bit.

	* ircd/s_user.c: Send network with 001.

2003-05-01 splidge <splidge@quakenet.org>
        * ircd/match.c: Added a check to detect the end of the string.

2003-05-02 Isomer <isomer@undernet.org>
	* ircd/IPcheck.c: Added assert()'s to check for underflow

2003-05-01 hikari <shadow@undernet.org>
	* ircd/s_conf.c: Added check to ensure the first character of a k:
	line was a digit.

	* ircd/ircd.c: Only reset the ping check on registered clients.
	Unregistered clients will now ping out if they don't register
	within FEAT_CONNECTTIMEOUT.

2003-04-28 Jeekay <jeekay@netgamers.org>
	* ircd/s_user.c: Store finduser() return value
	instead of calling twice.

2003-04-19  Perry Lorier <isomer@undernet.org>
	* configure.in: Changed == to = in "if test" line from the MacOS X
	compilation patch.

2003-04-24 Jeekay <jeekay@netgamers.org>
	* ircd/s_conf.c: Added check for FEAT_HUB after the configuration file 
	is read.

2003-04-24 Jeekay <jeekay@netgamers.org>
	* ircd/s_user.c: Altered (K-lined) to depend on find_kill type

2003-04-26  David Mansell <splidge@quakenet.org>
	* ircd/m_invite.c: let +k users invite into channels they aren't on.

2003-04-26  David Mansell <splidge@quakenet.org>
	* ircd/channel.c: removed extra :, it confuses broken clients.

2003-04-19  Perry Lorier <isomer@undernet.org>
	* ircd/gline.c, include/gline.c: Added realname glines.  I feel dirty